--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="프론트 엔드, front-end, fronend, frontEnd"
+    />
     <title>loa</title>
     <style>
       html {
@@ -17,9 +21,16 @@
       #root {
         height: 100%;
       }
+      a:link {
+        text-decoration: none;
+      }
+      a:hover {
+        text-decoration: none;
+      }
     </style>
   </head>
   <body>
+    <base href="/" />
     <div id="root"></div>
   </body>
 </html>
